{{$NEXT}}

1.121570  2012-06-05 19:37:11 Europe/London

 * Fix Cisco prompt detection when containing [] characters (Alexander Hartmaier)
 * Detect connection failures and die with buffered transport error

1.120670  2012-03-07 20:20:06 Europe/London

 * Fix IO::Pty dependency only to appear on non-Win32. This has required a
   local hack to Dist::Zilla so please contact the author if you build from dist.ini.

1.120560  2012-02-25 16:52:07 Europe/London

 * fix typo (C. Vicente)
 * fix Win32 path to locate plink.exe

1.120042  2012-01-04 21:08:07 Europe/London

 * test release process

1.120040  2012-01-04 20:58:57 Europe/London

  * ors attribute should be writeable (V. Magnin)

1.113610  2011-12-27 00:51:35 Europe/London

  * New implementation of output parser. Note the following:

  For the cmd() and macro() methods: In scalar context all data is returned.
  In list context the gathered response is returned as a list of lines. In both
  cases your local platform's newline character will end all lines.

1.113600  2011-12-26 16:35:32 Europe/London

  * Add has_prompt and has_macro methods
  * Add Foundry phrasebook (Vincent Magnin)

1.112610  2011-09-18 10:41:37 Europe/London

  * Escape embedded % in cmd() commands (B. Hogden)
  * Apply POD typo fixes patch (V. Foitzik)

1.112602  2011-09-17 23:45:50 Europe/London

  * Newline only added if there was a new *line* in output

1.112601  2011-09-17 18:32:55 Europe/London

  * Fixes to handling of newlines in returned response.
    Now aggressively remove control characters, and replace all newlines with \n

1.112600  2011-09-17 14:17:44 Europe/London

  * Set quotemeta when stripping command from returned output (V. Foitzik)

1.112190  2011-08-07 21:33:07 Europe/London

  * use_net_telnet_connection is checked even on Win32
  * make add_library actually DTRT when you want both lib and add_lib

1.111590  2011-06-08 23:26:09 Europe/London

  * Support more SSH transport options, handle username
