@@ -1,7 +1,7 @@
+prompt shell
+    match /^\$/
+
 macro sdf_login
     send %s\n
-    follow /\(continue\)/ with "\n"
-    match /BACKSPACE key: ?$/
-    send ''
-    follow /\[CONTINUE\]/ with "\n"
     match shell
+
